implement mongo service and heartbeat monitoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,12 +42,26 @@ services:
       - internal
 
   mongo:
-    image: mongo:7
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - mongo_data:/data/db
     restart: unless-stopped
     networks:
       - internal
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_BASICAUTH_ENABLED: true
+      ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
+      ME_CONFIG_BASICAUTH_PASSWORD: mongoexpresspass
 
   redis:
     image: redis:7
