--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
       context: .
       dockerfile: api-coordinator/Dockerfile
     env_file: ./deploy/env/api.env
+    ports:
+      - "8000:80"
+      - "9090:9000"
     environment:
       COORDINATOR_ADDR: ":9000"
-    expose:
-      - "9090"
     depends_on:
       - mongo
       - redis
@@ -42,26 +43,21 @@ services:
       - internal
 
   mongo:
-    image: mongo
+    image: mongo:8.0
+    command: ["mongod", "--bind_ip_all"]
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: default
+    ports:
+      - "27017:27017"
     volumes:
       - mongo_data:/data/db
     restart: unless-stopped
     networks:
-      - internal
-
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-      ME_CONFIG_BASICAUTH_ENABLED: true
-      ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
-      ME_CONFIG_BASICAUTH_PASSWORD: mongoexpresspass
+      internal:
+        aliases:
+          - mongo 
 
   redis:
     image: redis:7
