--- a/api-coordinator/Dockerfile
+++ b/api-coordinator/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.23-alpine AS builder
 RUN apk add --no-cache git
 WORKDIR /src
 
-COPY go.mod go.sum ./
+COPY ../go.mod ../go.sum ./
 RUN go mod download
 
 COPY . .
