--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,8 +60,29 @@ services:
     networks:
       - internal
 
+  mongo:
+    image: mongo:6.0
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data_new:/data/db
+    networks:
+      - internal
+
+  loader:
+    build:
+      context: .
+      dockerfile: movie_lens_data_procc/Dockerfile
+    depends_on:
+      - mongo
+    volumes:
+      - ./dataset:/app/dataset:ro
+    networks:
+      - internal
+
 networks:
   internal:
 
 volumes:
-  mongo_data:
+  mongo_data_new:
